<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="no.hvl.dat153.facebookclient.MainActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/titleString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textSize="36sp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/graph"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/graphAPI"
        android:onClick="graphClick"/>

    <Button
        android:text="@string/post"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/post"
        android:onClick="postClick"/>

    <Button
        android:text="@string/share"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/share"
        android:onClick="shareClick"/>

    <Button
        android:text="@string/like"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/like"
        android:onClick="likeClick"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_margin="4dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>


</LinearLayout>
